--- a/projects/shell/src/app/landing-page/landing-page.component.html
+++ b/projects/shell/src/app/landing-page/landing-page.component.html
@@ -1,9 +1,9 @@
 <div>
   <ul class="navbar-nav">
     <!-- static links -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-    </li>
+    </li> -->
     <!-- dynamic links from the mf.manifest.json -->
     <li *ngFor="let remote of remotes">
       <a
